[package]
name = "embedded-matrix"
version = "0.1.0"
edition = "2024"
authors = ["Jorge Andre Castro <georgeandrec@gmail.com>"]
license = "GPL-2.0-or-later"
description = "Matrices 2x2 et 3x3 en f32 pour systèmes embarqués no_std, sans dépendance"
repository = "https://github.com/jorgeandrecastro/embedded-matrix"
documentation = "https://docs.rs/embedded-matrix"
readme = "README.md"
keywords = ["matrix", "math", "no-std", "embedded", "f32"]
categories = ["mathematics", "no-std", "embedded"]

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true